@@ -9,22 +9,25 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: FileCmd.test,v 1.2 2000/12/22 09:47:15 mdejong Exp $
+# RCS: @(#) $Id: FileCmd.test,v 1.3 2003/02/02 00:59:16 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import -force ::tcltest::*
 }
 
+set file_options {atime, attributes, channels, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, link, lstat, mtime, mkdir, nativename, normalize, owned, pathtype, readable, readlink, rename, rootname, separator, size, split, stat, system, tail, type, volumes, or writable}
+
+
 global env
 set platform [testgetplatform]
 
 test filecmd-1.1 {cmdProc} {
     list [catch file msg] $msg
-} {1 {wrong # args: should be "file option name ?arg ...?"}}
+} {1 {wrong # args: should be "file option ?arg ...?"}}
 test filecmd-1.2 {cmdProc} {
     list [catch {file x} msg] $msg
-} {1 {wrong # args: should be "file option name ?arg ...?"}}
+} [list 1 "bad option \"x\": must be $file_options"]
 
 # dirname
 
@@ -749,7 +752,7 @@ test filecmd-5.34 {getExtension extension} {
     file extension a\\b.c\\
 } {}
 set num 35
-foreach value {a..b a...b a.c..b ..b} result {..b ...b ..b ..b} {
+foreach value {a..b a...b a.c..b ..b} result {.b .b .b .b} {
     foreach p {unix mac windows} {
 	test filecmd-5.$num {getExtension extension} "
 	    testsetplatform $p
@@ -1694,7 +1697,7 @@ test filecmd-7.137 {splitPath: win} {
 test filecmd-8.1 {cmdProc: split} {
     testsetplatform unix
     list [catch {file join} msg] $msg
-} {1 {wrong # args: should be "file option name ?arg ...?"}}
+} {1 {wrong # args: should be "file join name ?name ...?"}}
 test filecmd-8.2 {cmdProc: join} {
     testsetplatform unix
     file join {}
@@ -2361,7 +2364,7 @@ test filecmd-10.1 {cmdProc: readable} {
 catch {exec chmod 444 gorp.file}
 test filecmd-10.2 {cmdProc: readable} {unixExecs} {file readable gorp.file} 1
 catch {exec chmod 333 gorp.file}
-if {$user != "root"} {
+if {$env(USER) != "root"} {
     test filecmd-10.3 {cmdProc: readable} {unixOnly} {
 	file reada gorp.file
     } 0
@@ -2376,7 +2379,7 @@ test filecmd-11.1 {cmdProc: writable} {
     list [catch {file writable a b} msg] $msg
 } {1 {wrong # args: should be "file writable name"}}
 catch {exec chmod 555 gorp.file}
-if {$user != "root"} {
+if {$env(USER) != "root"} {
     test filecmd-11.2 {cmdProc: writable} {unixExecs} {
 	file writable gorp.file
     } 0
@@ -2393,7 +2396,7 @@ test filecmd-12.1 {cmdProc: executable} {unixExecs} {
     list [catch {file executable a b} msg] $msg
 } {1 {wrong # args: should be "file executable name"}}
 catch {exec chmod 000 dir.file}
-if {$user != "root"} {
+if {$env(USER) != "root"} {
     test filecmd-12.2 {cmdProc: executable} {unixOnly} {
 	file executable gorp.file
     } 0
@@ -2439,7 +2442,7 @@ if {$tcl_platform(platform) == "unix"} {
     makeDirectory /tmp/tcl.foo.dir
     makeFile 12345 /tmp/tcl.foo.dir/file
     exec chmod 000 /tmp/tcl.foo.dir
-    if {$user != "root"} {
+    if {$env(USER) != "root"} {
 	test filecmd-13.6 {cmdProc: exists} {
 	    file exists /tmp/tcl.foo.dir/file
 	} 0
@@ -2552,7 +2555,7 @@ test filecmd-18.1 {cmdProc: owned} {
     list [catch {file owned a b} msg] $msg
 } {1 {wrong # args: should be "file owned name"}}
 test filecmd-18.2 {cmdProc: owned} {unixExecs} {file owned gorp.file} 1
-if {$user != "root"} {
+if {$env(USER) != "root"} {
     test filecmd-18.3 {cmdProc: owned} {unixOnly} {file owned /} 0
 }
 test filecmd-18.4 {cmdProc: owned} {unixOnly} {file owned _bogus_} 0
@@ -2666,25 +2669,25 @@ test filecmd-22.5 {cmdProc: type} {
 
 test filecmd-23.1 {error conditions} {
     list [catch {file gorp x} msg] $msg
-} {1 {bad option "gorp": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "bad option \"gorp\": must be $file_options"]
 test filecmd-23.2 {error conditions} {
     list [catch {file ex x} msg] $msg
-} {1 {ambiguous option "ex": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"ex\": must be $file_options"]
 test filecmd-23.3 {error conditions} {
     list [catch {file is x} msg] $msg
-} {1 {ambiguous option "is": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"is\": must be $file_options"]
 test filecmd-23.4 {error conditions} {
     list [catch {file n x} msg] $msg
-} {1 {bad option "n": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"n\": must be $file_options"]
 test filecmd-23.5 {error conditions} {
     list [catch {file read x} msg] $msg
-} {1 {ambiguous option "read": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"read\": must be $file_options"]
 test filecmd-23.6 {error conditions} {
     list [catch {file s x} msg] $msg
-} {1 {ambiguous option "s": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"s\": must be $file_options"]
 test filecmd-23.7 {error conditions} {
     list [catch {file t x} msg] $msg
-} {1 {ambiguous option "t": must be atime, copy, delete, dirname, executable, exists, extension, isdirectory, isfile, join, lstat, mtime, mkdir, owned, pathtype, readable, readlink, rename, rootname, size, split, stat, tail, type, or writable}}
+} [list 1 "ambiguous option \"t\": must be $file_options"]
 test filecmd-23.8 {error conditions} {
     list [catch {file dirname ~woohgy} msg] $msg
 } {1 {user "woohgy" doesn't exist}}
@@ -2792,7 +2795,7 @@ test filecmd-32.1 {TclFileCopyCmd} {
 
 test filecmd-33.1 {FileCopyRename: FileForceOption fails} {
     list [catch {file rename -xyz} msg] $msg
-} {1 {bad option "-xyz": must be -force, or --}}
+} {1 {bad option "-xyz": must be -force or --}}
 test filecmd-33.2 {FileCopyRename: not enough args} {
     list [catch {file rename xyz} msg] $msg
 } {1 {wrong # args: should be "file rename ?options? source ?source ...? target"}}
@@ -2987,7 +2990,7 @@ test filecmd-34.17 {TclFileMakeDirsCmd: TclpCreateDirectory succeeds} {
 
 test filecmd-35.1 {TclFileDeleteCmd: FileForceOption fails} {
     list [catch {file delete -xyz} msg] $msg
-} {1 {bad option "-xyz": must be -force, or --}}
+} {1 {bad option "-xyz": must be -force or --}}
 test filecmd-35.2 {TclFileDeleteCmd: not enough args} {
     list [catch {file delete -force -force} msg] $msg
 } {1 {wrong # args: should be "file delete ?options? file ?file ...?"}}
@@ -3278,7 +3281,7 @@ test filecmd-37.4 {FileForceOption: bad option} {
     set msg [list [catch {file delete -tf1} msg] $msg]
     file delete -- -tf1
     set msg
-} {1 {bad option "-tf1": must be -force, or --}}
+} {1 {bad option "-tf1": must be -force or --}}
 test filecmd-37.5 {FileForceOption: multiple times through loop} {
     createfile --
     createfile -force
